fix(core): fix buttons colors/alignement according to the brand

--- a/app/less/o-buttons.less
+++ b/app/less/o-buttons.less
@@ -7,6 +7,8 @@
   color: @color;
   background-color: @background;
   border-color: @background;
+  // TODO put it in the variables
+  font-family: "HelvNeue75";
 //   .box-shadow(inset 0 1px 0 rgba(255,255,255,.15), 0 1px 1px rgba(0,0,0,.075));
 
   &:hover,
