--- a/app/less/variables-orange2015.less
+++ b/app/less/variables-orange2015.less
@@ -240,7 +240,7 @@
 @btn-info-hover-bg: @brand-orange-white;
 
 @btn-link-disabled-color: @gray-light;
-@btn-link-disabled-black-bg-color: @gray-light;
+@btn-link-disabled-black-bg-color: @gray-dark;
 @link-color-disabled: @gray-light;
 @link-hover-decoration: none;
 @link-hover-color-disabled: @link-color-disabled;
